cargo-features = ["strip"]

[package]
name = "leech"
version = "0.1.0"
authors = ["Federico Morrone <flickmor@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
incremental = false
# Unless proper benchmarks show it's worth the tradeoff this remains off
# opt-level = "z"
strip = "symbols"

[dependencies]
serde_bencode = "^0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
url = "2.2.0"
anyhow = "1.0.34"
bytes = "0.6"
rand = "0.5.4"
sha1 = { version = "0.6.0", features = ["std"] }
tokio = { version = "0.3.4", features = ["full"] }
