cargo-features = ["strip"]

[package]
name = "leech"
version = "0.1.0"
authors = ["Federico Morrone <flickmor@gmail.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
incremental = false
strip = "symbols"

[dependencies]
anyhow = "1.0.34"
bytes = "0.6"
rand = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "^0.2.2"
serde_bytes = "0.11"
sha1 = { version = "0.6.0", features = ["std"] }
tokio = { version = "0.3.4", features = ["fs","macros","net","rt-multi-thread"] }
url = "2.2.0"
