[package]
name = "bencode"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "1.8.0", features = ["serde-1"] }
num-traits = "0.2.14"
paste = "1.0.6"
serde = "1.0.133"
serde_bytes = "0.11.5"
thiserror = "1.0.30"

[dev-dependencies]
serde_derive = "1.0.136"
serde_bencode = "0.2.3"
color-eyre = "0.6.1"

[features]
bool = []