[package]
name = "bencode"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = { version = "1.8.2", features = ["serde-1"] }
num-traits = "0.2.15"
paste = "1.0.7"
serde = "1.0.137"
serde_bytes = "0.11.6"
thiserror = "1.0.31"

[dev-dependencies]
serde_derive = "1.0.137"
serde_bencode = "0.2.3"
color-eyre = "0.6.1"

[features]
bool = []
