[package]
name = "bencode"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "0.2.15"
paste = "1.0.7"
serde = "1.0.152"
thiserror = "1.0.38"

[dev-dependencies]
serde_derive = "1.0.152"
serde_bencode = "0.2.3"
color-eyre = "0.6.2"
serde_bytes = "0.11.8"
serde_test = "1.0.152"

[features]
bool = []
