[package]
name = "leech"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2021"

[dependencies]
clap = { version = "4.1.4", default-features = false, features = ["help", "usage", "wrap_help", "derive", "std", "color", "error-context"] }
color-eyre = "0.6.2"
leech_core = { path = "../core" }
tokio = { version = "1.24.2", features = ["macros", "parking_lot"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "parking_lot", "tracing-log"] }
