[package]
name = "leech_core"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2021"

[dependencies]
anyhow = "1.0.44"
array_utils = { path = "../array_utils" }
bitvec = "0.22.3"
peers = { path = "../peers" }
futures-core = "0.3.17"
metainfo = { path = "../metainfo" }
nom = "7.0.0"
rand = "0.8.4"
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["io-std", "io-util", "fs", "net", "rt-multi-thread", "parking_lot"] }
tokio-stream = "0.1.8"
tracker = { path = "../tracker" }
url = "2.2.2"
