[package]
name = "leech_core"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
array_utils = { path = "../array_utils" }
bitvec = "1.0.1"
bytes = "1.3.0"
indexmap = "1.9.2"
peers = { path = "../peers" }
futures = "0.3.25"
nom = "7.1.3"
rand = "0.8.5"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["io-std", "io-util", "fs", "net", "rt-multi-thread", "parking_lot"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
tracker = { path = "../tracker" }
url = { version = "2.3.1", features = ["serde"] }
sha-1 = "0.10.1"
# bento = { git = "https://github.com/morr0ne/bento",  rev = "d07a693", features = ["url"] }
tracing = "0.1.37"
bencode = { version = "0.1.0", path = "../bencode" }
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"

[dev-dependencies]
tokio-test = "0.4.2"
