[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
bento = { git = "https://github.com/morr0ne/bento", features = ["indexmap", "url"] }
form_urlencoded = "1.0.1"
hyper = { version = "0.14.14", default-features = false, features = ["client", "http1", "http2", "runtime", "stream", "tcp"] }
hyper-tls = "0.5.0"
nom = "7.0.0"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["io-std", "io-util", "fs", "net", "rt-multi-thread", "parking_lot", "macros"] }
tokio-tungstenite = "0.15.0"
url = "2.2.2"

[dev-dependencies]
array_utils = { path = "../array_utils" }
metainfo = { version = "0.1.0", path = "../metainfo" }
rand = "0.8.4"
