[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
bento = { git = "https://github.com/morr0ne/bento",  rev = "d07a693", features = ["url"] }
form_urlencoded = "1.0.1"
hyper = { version = "0.14.16", default-features = false, features = ["client", "http1", "http2", "runtime", "stream", "tcp"] }
hyper-tls = "0.5.0"
nom = "7.1.0"
rand = "0.8.4"
tokio = { version = "1.14.0", features = ["io-std", "io-util", "fs", "net", "rt-multi-thread", "parking_lot", "macros"] }
tokio-tungstenite = "0.17.1"
url = "2.2.2"

[dev-dependencies]
array_utils = { path = "../array_utils" }
rand = "0.8.4"
