[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
bento = { git = "https://github.com/morr0ne/bento",  rev = "d07a693", features = ["url"] }
form_urlencoded = "1.0.1"
hyper = { version = "0.14.23", default-features = false, features = ["client", "http1", "http2", "runtime", "stream", "tcp"] }
hyper-tls = "0.5.0"
nom = "7.1.3"
rand = "0.8.5"
tokio = { version = "1.24.2", features = ["io-std", "io-util", "fs", "net", "rt-multi-thread", "parking_lot", "macros"] }
tokio-tungstenite = "0.18.0"
url = "2.3.1"

[dev-dependencies]
array_utils = { path = "../array_utils" }
rand = "0.8.5"
